# amazon-polly-tts-for-windows

./: .gitignore  PollyPlayer.sln  PollyTTSEngine.nuspec  PollyTTSEngine.sln  PollyTTSInstaller-x64.iss  PollyTTSInstaller-x86.iss  PollyTTSInstaller.iss  PollyWindowsTTS.nuspec  git-args-Kr71Ac  iam_policy.json  install-vcpkg.bat  license.txt  readme.md  test.txt
PollyPlayer/: Form1.Designer.cs  Form1.cs  Form1.resx  PollyPlayer.csproj  Program.cs
PollyPlayer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
PollyTTSEngine/: CMakeLists.txt  CMakeSettings.json  LogUtils.cpp  LogUtils.h  PollyManager.cpp  PollyManager.h  PollySpeechMarksResponse.cpp  PollySpeechMarksResponse.h  PollySpeechResponse.h  PollyTTSEngine.c  PollyTTSEngine.cpp  PollyTTSEngine.filters  PollyTTSEngine.h  PollyTTSEngine.idl  PollyTTSEngine.nuspec  PollyTTSEngine.rc  PollyTTSEngine.sln  PollyTTSEngine.vcxproj  PollyTTSEngine_i.c  RCb35144  SapiToPolly.cpp  SapiToPolly.h  SpeechMark.cpp  SpeechMark.h  packages.config  resource.h  resource1.h  resource2.h  stdafx.cpp  tinyxml2.cpp  tinyxml2.h  ttsengobj.cpp  ttsengobj.h  ttsengobj.rgs  ttsengver.h
PollyTTSEngine/include/aws/core/utils/memory/: AWSMemory.h
PollyTTSEngine/include/tinyxml2/: tinyxml2.h
PollyTTSEngine/lib/Debug/: aws-cpp-sdk-core.lib  aws-cpp-sdk-polly.lib  aws-cpp-sdk-text-to-speech.lib
PollyTTSEngine/lib/Release/: aws-cpp-sdk-core.lib  aws-cpp-sdk-polly.lib  aws-cpp-sdk-text-to-speech.lib
installvoices/: CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  InstallVoices.cpp  InstallVoices.sln  InstallVoices.vcxproj  InstallVoices.vcxproj.filters  VoiceForSapi.cpp  VoiceForSapi.h  packages.config  stdafx.cpp  stdafx.h
makevoice/: InstallVoices.cpp  MakeVoice.cpp  MakeVoice.vcxproj  MakeVoice.vcxproj.filters  SampleVoice.vce  VoiceForSapi.cpp  VoiceForSapi.h  packages.config  stdafx.h
